<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org</groupId>
	<artifactId>seage</artifactId>
	<version>0.9.0-SNAPSHOT</version>
	<name>seage</name>
	<packaging>pom</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<junit.jupiter.version>5.2.0</junit.jupiter.version>
		<junit.platform.version>1.2.0</junit.platform.version>
		<sonar.coverage.jacoco.xmlReportPaths>${maven.multiModuleProjectDirectory}/seage-launcher/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
	</properties>

	<modules>
		<module>seage-aal</module>
		<module>seage-misc</module>
		<module>seage-metaheuristics</module>
		<module>seage-hyperheuristics</module>
		<module>seage-problems/discrete/tsp</module>
		<module>seage-problems/discrete/sat</module>
		<!-- <module>seage-problems/discrete/jssp</module> -->
		<!-- <module>seage-problems/discrete/qap</module> -->
		<module>seage-launcher</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.7.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.3.0-alpha5</version>
		</dependency>
	</dependencies>


	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<!-- <version>0.8.7-SNAPSHOT</version> -->
				</plugin>
				<plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>3.1.1</version>
          <configuration>
						<configLocation>google_checks.xml</configLocation>
            <suppressionsLocation>${maven.multiModuleProjectDirectory}/.settings/checkstyle-suppressions.xml
            </suppressionsLocation>
            <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
            <!-- Ensure generated source files are not style-checked -->
            <includeTestSourceDirectory>true</includeTestSourceDirectory>
            <encoding>UTF-8</encoding>
            <consoleOutput>false</consoleOutput>
						<failsOnError>true</failsOnError>
						<failOnViolation>false</failOnViolation>
						<violationSeverity>warning</violationSeverity>
            <linkXRef>false</linkXRef>
            <outputFile>
              ${project.build.directory}/reports/checkstyle/checkstyle-errors.xml
            </outputFile>
          </configuration>
          <executions>
            <execution>
              <id>checkstyle</id>
              <phase>validate</phase>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.6</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.2</version>
				<inherited>true</inherited>
				<configuration>
					<executable>java</executable>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.4.1</version>
				<inherited>false</inherited>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.0</version>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.21.0</version>
				<dependencies>
					<dependency>
						<groupId>org.junit.platform</groupId>
						<artifactId>junit-platform-surefire-provider</artifactId>
						<version>${junit.platform.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.1.3</version>
				<dependencies>
					<!-- overwrite dependency on spotbugs if you want to specify the version 
						of spotbugs -->
					<dependency>
						<groupId>com.github.spotbugs</groupId>
						<artifactId>spotbugs</artifactId>
						<version>4.2.0</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
      </plugin>
		</plugins>
	</build>
	<scm>
		<connection>scm:git:git@github.com:seage/seage.git</connection>
		<url>scm:git:git://github.com/seage/seage.git</url>
		<developerConnection>scm:git:git@github.com:seage/seage.git</developerConnection>
	</scm>
</project>
